src/main/grammar/formalgrammar
// ------------------- TOP LEVEL -------------------

top_item = (func_def | var_decl | class_def) SEPARATOR ;
// sve što moze biti na top nivou: funkcija, promenljiva, klasa
// sada svaka definicija na top nivou zavrsava separatorom

class_def =
    CLASS IDENTIFICATOR [ EXTENDS IDENTIFICATOR ]
        class_body ;
// definicija klase, opcionalno nasleđivanje

class_body = { (top_item) SEPARATOR } ;
// telo klase: funkcije i deklaracije promenljivih, svaki item zavrsava separatorom

program =
    { top_item SEPARATOR }
    EOF ;
// ceo program završava EOF

// ------------------- FUNKCIJE -------------------

params = param { COMMA param } ;
param  = IDENTIFICATOR type ;
// parametar funkcije: ime i tip

func_def =
    FUNCTION IDENTIFICATOR LPAREN [ params ] RPAREN
        block ;
// definicija funkcije

// ------------------- BLOKOVI -------------------

block = { stmt SEPARATOR } ;
// blok naredbi, svaka naredba zavrsava separatorom

// ------------------- NAREDBE -------------------

stmt =
      var_decl
    | assign_stmt
    | incdec_stmt
    | call_stmt
    | return_stmt
    | if_stmt
    | for_stmt
    | while_stmt
    | do_stmt ;
// sve naredbe koje parser moze da prepozna

// --------------- DODELE I INC/DEC ----------------

lvalue = IDENTIFICATOR { LBRACKET expr RBRACKET } ;
// promenljiva ili element niza

assign_stmt = lvalue ASSIGN expr ;
// dodela vrednosti

incdec_stmt = lvalue INC | lvalue DEC ;
// inkrement/dekrement

// ------------------- FUNKCIJE -------------------

call_expr = IDENTIFICATOR LPAREN [ args ] RPAREN ;
// poziv funkcije po imenu, sa opcionim argumentima

args = expr { COMMA expr } ;
// lista argumenata funkcije

call_stmt = call_expr | PRINT LPAREN expr RPAREN | SCAN LPAREN IDENTIFICATOR RPAREN ;
// pozivi funkcija i print/scan

return_stmt = RETURN expr ;
// return naredba

// ------------------- KONTROLNE STRUKTURE -------------------

if_stmt =
    IF LPAREN cond RPAREN
        block
    { ELSEIF LPAREN cond RPAREN block }
    [ ELSE block ] ;
// grananje je podrzano

for_stmt =
    FOR LPAREN IDENTIFICATOR LPAREN expr RPAREN
        block ;
// for petlja je pojednostavljena, ali funkcionalna

while_stmt =
    WHILE LPAREN cond RPAREN
        block ;
// while petlja

do_stmt =
    DO
        block
    WHILE LPAREN cond RPAREN ;
// do-while petlja

// ------------------- PROMENLJIVE -------------------

var_decl = type ident_list ;
// deklaracija promenljivih

type = BOOLEAN | INT | DOUBLE | LONG | CHAR | STRING | ARRAY ;
// tipovi promenljivih

ident_list = IDENTIFICATOR { COMMA IDENTIFICATOR } ;
// lista promenljivih (npr. x, y, z)

// ------------------- IZRAZI I OPERATORI -------------------

expr = call_expr | aexpr ;
// izraz

aexpr = atom [ arith_op atom ] ;
// aritmeticki izraz sa jednom operacijom

cond = aexpr [ logic_op cond ] ;
// uslov za if, while i do-while, podrzava AND/OR
// mozemo pojednostaviti kasnije ako treba

arith_op = ADD | SUBTRACT | MULTIPLY | DIVIDE | PERCENT | CARET ;
// aritmeticki operatori

rel_op = LT | LE | GT | GE | EQ | NEQ ;
// relacioni operatori

logic_op = AND | OR ;
// logicki operatori

// ------------------- ATOMI -------------------

atom =
      INT_LIT
    | DOUBLE_LIT
    | LONG_LIT
    | CHAR_LIT
    | STRING_LIT
    | TRUE
    | FALSE
    | IDENTIFICATOR
    | IDENTIFICATOR LBRACKET expr RBRACKET
    | LPAREN expr RPAREN ;
